--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "click (>=8.2.1,<9.0.0)",
-    "keyring (>=25.6.0,<26.0.0)"
+    "keyring (>=25.6.0,<26.0.0)",
+    "google-genai (>=1.16.1,<2.0.0)",
 ]
 
 [tool.poetry]
